infra/k8s/post-deneme.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-deneme-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5000 
      targetPort: 6000  # containerdakı projenın portu ıle esleşmelı

    




# minikube bize kubernetes cluster ayaga kaldırır. bunuda hyperv ıle sanal makına yaratarak ıcınde kubernetes cluster olusturarak yaptı  minikube node list diyerek mi sanal makınan ıpsını gorebırlız . nodeport ıse 31 ile başlayan   4000:32170/TCP bu sekılde bırşey yapar  biz o makınan ıpsını vyanı http://172.19.215.78:32170/posts seklınde verırsek  projeye ulasırız cunku o ıpnın yanı node'un yanı sanal makınanın ıcındedır kubernetes cluster ve pod  daha sonra  4000:32170/TCP oldugu ıcın. bu 3217 [...]
